--- a/app/views/static_pages/auto-accidents.html.erb
+++ b/app/views/static_pages/auto-accidents.html.erb
@@ -26,7 +26,7 @@
 					</td>
 
 					<td>
-						<p>If you are the victim of an injury as the result of a serious auto accident in Alabama, and a resident of Baldwin, Mobile, or Escambia County, Noel B. Leonard will fight to ensure you receive the compensation you deserve.</p>
+						<p>If you are the victim of an injury as the result of a serious auto accident in Baldwin, Mobile, or Escambia County, Noel B. Leonard will fight to ensure you receive the compensation you deserve.</p>
 					</td>
 
 				</tr>
