--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -27,7 +27,7 @@
 		<h3><span>Noel B. Leonard</span> <br>is an Accident Attorney in Foley, Alabama.</h3>
 		<hr class="fancy dark">
 		<div class="clearfix"></div>
-		<p>Noel B. Leonard Attorney, LLC is committed to providing excellent legal service within the state of Alabama. Noel's firm offers their services to the residents of Baldwin, Mobile, and Escambia counties.</p>
+		<p>Noel B. Leonard Attorney, LLC is committed to providing excellent legal service within the state of Alabama. Noel's firm offers their services in the counties of Baldwin, Mobile, and Escambia.</p>
 		<a href="#practice-areas" class="fst-links">Practice Areas</a>
 		<%= link_to "Contact Us", contact_path, class: 'fst-links' %>
 	</div>
@@ -41,7 +41,7 @@
 
 				<div class="break"></div>
 				<h4><span>Who do we represent?</span></h4>
-					<p class="second">If you are suffering from a serious injury caused by a motorcycle, automotive, or 18-wheeler accident, and a resident of Baldwin, Mobile, or Escambia County, Noel and his firm can help.</p>
+					<p class="second">If you are suffering from a serious injury caused by a motorcycle, automotive, or 18-wheeler accident in Baldwin, Mobile, or Escambia County, Noel and his firm can help.</p>
 
 					<p>Noel B. Leonard Attorney, LLC employs a knowledgeable staff. Our team is capable of addressing your legal concerns, and helping you to understand your rights.</p>
 					<p>Our firm will evaluate your case, and help file your claim, and make every effort to see that you receive proper compensation for your injuries sustained during the accident.</p>
