--- a/app/views/static_pages/motorcycle-accidents.html.erb
+++ b/app/views/static_pages/motorcycle-accidents.html.erb
@@ -12,20 +12,25 @@
 <div class="ms1">
 	<div class="container">
 		<div class="left">
-				<h4>Noel B. Leonard is an avid motorcycle enthusiast, who understands the risk firsthand. He represents victims of motorcyle accidents in the counties of Baldwin, Mobile, and Escambia.</h4>
-				<hr>
-				<p>As the least protected vehicles on the road, motorcycles have higher risk of injury than that of traditional motorists.
-				These accidents typically result in high medical expenses, and often, a need for rehabilitative treatment and extended care, as well as substantial time off from work.</p>
-				<p>If you have been injured in a motorcycle accident, you need an attorney you can count on, with the ability to deliver the legal results you need to get your life back in order.</p>
+			<h4>Noel B. Leonard is an avid motorcycle enthusiast, who understands the risk firsthand. He represents victims of motorcyle accidents in the counties of Baldwin, Mobile, and Escambia.</h4>
+			<hr>
+			<p>As the least protected vehicles on the road, motorcycles have higher risk of injury than that of traditional motorists.
+			These accidents typically result in high medical expenses, and often, a need for rehabilitative treatment and extended care, as well as substantial time off from work.</p>
+			<p>If you have been injured in a motorcycle accident, you need an attorney you can count on, with the ability to deliver the legal results you need to get your life back in order.</p>
+
+			<div class="sidebar">
+				<div class="inner">
+					<h4>Noel B. Leonard is on your side.</h4>
+					<p>As an accident attorney and a motorcyclist, Noel B. Leonard has the knowledge and experience to successfully litigate your claim.</p>
+					<hr class="fancy">
+					<p>Noel and his firm will put all of their efforts into fighting for the compensation you deserve, to help you move forward after your injury.</p>
+				</div>
+			</div>
 		</div>
 
-		<div class="sidebar">
-			<div class="inner">
-				<h4>Noel B. Leonard is on your side.</h4>
-				<p>As an accident attorney and a motorcyclist, Noel B. Leonard has the knowledge and experience to successfully litigate your claim.</p>
-				<hr class="fancy">
-				<p>Noel and his firm will put all of their efforts into fighting for the compensation you deserve, to help you move forward after your injury.</p>
-			</div>
+		<div class="right">
+			<%= image_tag('noel5.jpg', class: 'Noel B. Leonard, with his motorcycle', class: 'img-responsive portrait') %>
+			<%= image_tag('noel6.jpg', class: 'Noel B. Leonard, with his motorcycle', class: 'img-responsive portrait-m') %>
 		</div>
 	</div>
 </div>
