--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -61,8 +61,11 @@
     </div>
 
     <div class="left">
-      <p>If you or a resident of <span>Mobile</span>, <span>Baldwin</span>, or <span>Escambia</span> county, and suffer
-      from a serious injury as a result of a motorcycle, automotive, or 18-wheeler accident, contact Noel B. Leonard today to discuss your options.</p>
+     <!--  <p>If you or a resident of <span>Mobile</span>, <span>Baldwin</span>, or <span>Escambia</span> county, and suffer
+      from a serious injury as a result of a motorcycle, automotive, or 18-wheeler accident, contact Noel B. Leonard today to discuss your options.</p> -->
+
+       <p>If you suffer from a serious injury resulting from a motorcycle, automotive, or 18-wheeler accident in <span>Mobile</span>, <span>Baldwin</span>, or <span>Escambia</span> county, contact Noel B. Leonard today to discuss your options.</p>
+
       <p> Fill out our Case Evaluation Form below, or call us now, to schedule a consultation.</p>
     </div>
   </div>
@@ -71,8 +74,13 @@
 <div class="sec-form">
   <div class="container">
     <div class="col-md-8 col-md-offset-2 form">
-      <div class="siteorigin-widget-tinymce textwidget">
-        <div id="wufoo-zj0erzt178k0t4"><iframe id="wufooFormzj0erzt178k0t4" class="wufoo-form-container" height="821" allowtransparency="true" frameborder="0" scrolling="no" style="width:100%;border:none" src="https://vincidesigns.wufoo.com/embed/zj0erzt178k0t4/def/embedKey=zj0erzt178k0t4277622&amp;entsource=wordpress&amp;referrer=http%3Awuslashwuslashwww.attorney-leonard.comwuslashabout-uswuslash&amp;header=hide"><a href="https://vincidesigns.wufoo.com/forms/zj0erzt178k0t4/" title="html form">Fill out my Wufoo form!</a></iframe></div></div>
+
+      <!-- <div class="siteorigin-widget-tinymce textwidget"> -->
+        <div id="wufoo-zj0erzt178k0t4">
+          <iframe id="wufooFormzj0erzt178k0t4" class="wufoo-form-container" height="821" allowtransparency="true" frameborder="0" scrolling="no" style="width:100%;border:none" src="https://vincidesigns.wufoo.com/embed/zj0erzt178k0t4/def/embedKey=zj0erzt178k0t4277622&amp;entsource=wordpress&amp;referrer=http%3Awuslashwuslashwww.attorney-leonard.comwuslashabout-uswuslash&amp;header=hide"><a href="https://vincidesigns.wufoo.com/forms/zj0erzt178k0t4/" title="html form">Fill out my Wufoo form!</a></iframe>
+        </div>
+      <!-- </div> -->
+
     </div>
   </div>
 </div>
