--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -98,6 +98,9 @@
             <div class="module-content">
               <ul class="nav menu">
                 <%= render 'layouts/nav' %>
+                <li><%= link_to('Habla Espanol? Haga Clic Aqui', espanol_path ) %></li>
+
+                <li><%= link_to('Fill Out Our Contact Form', contact_path ) %></li>
               </ul>
             </div>
         </div>
