--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,86 +1,11 @@
 @import "variables";
 @import "mixins";
 
-// header.header-alt {@include sec-default(); display: none;
-//   background-color: $white;
-
-//     #top-bar {  @include sec-default(); padding: 5px 0px 0;
-//       background-color: $dk-blue;
-
-//       .tb-block {width:45%; float: right;}
-//       h5 {color: $white; display: inline-block; font-size: 14px; margin: 10px 0 0 10px; line-height: 1em; float: none;}
-//       span {display: inline-block; color: $white; margin: 0 10px; font-size: 18px;}
-//       h5 a {color: $white;}
-//     }
-
-//     .social-links { display: inline-block;
-//       li { display: inline-block; margin-right:10px;
-//         a { background-color: transparent; color: $white; font-size: 15px;
-//           &:hover {color: white;}
-//         }
-//       }
-//     }
-
-//     .main-header {@include sec-default(); padding: 10px 75px 5px;}
-//     .logo-block {display: inline-block; float: left; width: 40%; padding: 10px 0; margin-left: 50px;
-//       .logo-img {height:85px; float: left; margin-right:6px;}
-//       h3 {margin-top:25px; font-size: 22px;}
-//     }
-//     .main-block {display: inline-block; float: right; width: 40%; margin-top:14px;
-//       h4 {display: inline-block; color: $dark; text-align: center;
-//         span {font-weight: normal; font-size: 15px;}
-//         &.address {margin: 0 35px;text-align: center;}
-//        .call-link{color: $blue; font-size: 22px; font-weight: bold;}
-//       }
-//       .esp-link h4 { font-family: $open; margin-left: 70px; font-style: italic;background-color: $offwhite; padding: 10px;}
-//     }
-//     .mega-tab {@include sec-default(); background-color: $dk-blue; list-style:none;
-//       text-align: center; float: left;
-//       li{display:inline-block; margin: 10px 20px 0;
-//           &:last-child{margin-right: 5px;}
-//           &:first-child{margin-left: 0px;}
-//           a{ font-size: 15px; line-height: 2em; color: $white; text-transform: uppercase; }
-//       }
-
-//       .dropdown{width:auto;margin:0;margin-top:-1px;position:absolute;z-index:999;display:none;}
-//       .has-child:hover >.dropdown{display:block;width:175px; }
-//       .dropdown .dropdown-items{list-style:none;padding:0;margin:0;text-transform:uppercase;}
-//       .dropdown .dropdown-inner{background: $navy;padding:0px;box-shadow:0 3px 5px 0 rgba($black,0.2); }
-
-//       .dropdown li.menu-item{margin-left:0;display:block;padding:0;position:relative;width: 100%; border-top: none;border-bottom: 1px dotted rgba($light, .3);
-//           &:last-child {border-bottom: none;}
-//           a{width:100%;display:block;padding:10px;color:$white;cursor:pointer;font-size:14px; line-height: 2em;
-//               &:hover{color:$hcolor}
-//           }
-//       }
-//     }
-
-//     @include bp(tb) {
-//       #top-bar {padding-right:0px;
-//         .tb-block {width:75%; float: right; margin-right: 20px;}
-//       }
-
-//       .mega-tab { ul{padding-left:10px;} li{ margin: 10px 15px 0;}}
-//     }
-
-//     @include bp(md) {
-//       #top-bar {
-//         .tb-block {width:100%; float: none; margin: auto;}
-//       }
-//       .main-header {padding: 10px 30px 5px;}
-//       .logo-block { width: 40%;}
-//       .main-block {width: 55%; margin-top:5px;}
-//       .mega-tab {display: none}
-//     }
-// }
-
 header.header-new {
   @include sec-default(); background-color: $navy;
 
     .main-header {@include sec-default(); padding: 10px 90px 5px;}
-    // .logo-block {display: inline-block; float: left; width: 30%; padding: 5px 0;
       .logo-img {height:95px; float: left;}
-    // }
 
     .main-block {display: inline-block; float: right; margin-top:25px;
       h4.call, h4.eval, .esp-link h4, ul.social-links {display: inline-block; color: $white; float: left; margin: 0 25px 0 15px;
@@ -133,21 +58,21 @@ header.header-new {
       background-color: $dark;
   }
 }
-.offcanvas-menu .offcanvas-inner .module ul > li > a:hover{color:$white; background:$dark}
+.offcanvas-menu .offcanvas-inner .module ul > li > a:hover{color:$white; background:$navy}
 .offcanvas-menu .offcanvas-inner .module .menu .nav-child a{padding:4px 25px}
 .offcanvas-menu .menu ul li{position:relative}
 
 .close-offcanvas{position:absolute; top:15px; right:15px; z-index:1; color:$white; border:2px solid #eee; border-radius:100%; width:22px; height:22px; line-height:18px; text-align:center; font-size:12px}
-.close-offcanvas:hover{background:$black; color:$white}
+.close-offcanvas:hover{background:$navy; color:$white}
 
-.offcanvas-menu{width:280px; height:100%; background:darken($navy, 10%); color:$white; position:fixed; top:0; opacity:0; z-index:9999; overflow-y:scroll;
+.offcanvas-menu{width:280px; height:100%; background:$navy; color:$white; position:fixed; top:0; opacity:0; z-index:9999; overflow-y:scroll;
   .offcanvas-inner{padding:20px;}
   .module{margin-top:20px;
       ul{margin:0 -20px;
           li { margin-bottom:15px; padding-bottom:5px; padding-left: 15px; border-bottom:1px solid rgba($white, .4);
-              a { -webkit-transition:300ms; -o-transition:300ms; transition:300ms; padding:7px 0; padding-left:0px; color: $white; font-size: 14px; line-height: 1.5em;}
-              a:hover{background:transparent;}
-              &:first-child{margin-top:0}
+            a { -webkit-transition:300ms; -o-transition:300ms; transition:300ms; padding:7px 0; padding-left:0px; color: $white; font-size: 14px; line-height: 1.5em;}
+            a:hover{background:transparent;}
+            &:first-child{margin-top:0}
           }
       }
   }
@@ -185,14 +110,38 @@ header.header-new {
   }
 
   @include bp(md) {
-    .off-canvas {width: 10%; float: right; }
-    .main-block {width: 88%;  margin: 12px 0 10px; margin-left: 0; padding-left:40px;
-      h4.call, h4.eval, .esp-link h4, ul.social-links {width:30%; float: left; margin:0; margin-left: 15px; }
-      h4.eval, .esp-link h4 {margin-top: 15px;}
-      ul.social-links {width:30%; margin-top: 5px; padding-left:5px; }
-      // ul.social-links {float: left; li{margin-top:15px;}}
+    text-align: center;
+    .off-canvas { float: none; margin-top:10px;}
+    .main-block {width: 80%; text-align: center; margin: 0; padding: 10px 0 10px 30px;
+      h4.call, ul.social-links {width:auto; margin: 10px 0 10px 15%; }
+      ul.social-links {margin-top:20px;}
+      h4.eval, .esp-link h4{display: none;}
     }
   }
+
+  @include bp(sm) {
+    .off-canvas { float: none; margin-top:10px;}
+    .main-block {width: 80%;
+      h4.call, ul.social-links { margin-left: 8%; }
+      // ul.social-links {margin-top:20px;}
+    }
+  }
+
+   @include bp(xs) {
+    .off-canvas {width: 15%; margin-top:20px;}
+    .main-block { width:80%;
+      h4.call, ul.social-links { width: 85%; float: none; margin:10px auto 0; @include center-block(); }
+      ul.social-links {text-align: center; li{float: none; &:last-child{margin-right: 15px;}}}
+    }
+  }
+
+  // @include bp(ph) {
+  //   .off-canvas {width: 5%; float: left; margin-top:30px;}
+  //   .main-block { width:85%; margin: 0; text-align: center; padding: 10px 0 10px 30px;
+  //     h4.call, h4.eval, .esp-link h4, ul.social-links {width:45%; margin: 10px 0; float: left;}
+  //     ul.social-links {float: right; }
+  //   }
+  // }
 }
 
 
