--- a/app/views/static_pages/espanol.html.erb
+++ b/app/views/static_pages/espanol.html.erb
@@ -22,7 +22,7 @@
 				</ul>
 			</div>
 
-			<div class="col-md-5">
+			<div class="col-md-5 xs-hidden">
 				<%= image_tag('espanol_pic1.jpg', class: 'img-responsive bradius', alt: 'Noel B. Leonard, page for Spanish speaking clients') %>
 			</div>
 
