--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,126 +1,200 @@
 <% @page_title = "Contact Us" %>
 <% @page_description = "New Subject" %>
 
-<div class="contactpage">
-  <div class="pa-header">
-      <div class="overlay">
-          <div class="title-box">
-              <h1>Contact Us</h1>
+<div class="contact">
+        <div class="header-wrap">
+          <div class="cst-header">
+            <div class="title">
+              <h1>Contact Noel B. Leonard</h1>
+              <div class="title-line"></div>
+              <div class="clearfix"></div>
+              <h3>Attorney, LLC</h3>
+            </div>
           </div>
-      </div>
-  </div>
+        </div>
+        <div class="clearfix"></div>
 
-  <div class="main-wrap">
-    <div class="body-content">
-      <div class="s1">
-        <div class="col-md-4">
-          <p>Contact Noel B. Leonard today to discuss your personal injury, auto accident, or 18 wheeler accident injury claim for Baldwin, Mobile, or Escambia Counties Alabama.</p>
+        <div class="ms1">
+          <div class="container">
+            <div class="sidebar">
+                <div class="contact-info">
+                  <h4 class="call"><%= number_to_phone(2519438638, delimiter: '-') %></h4>
+                  <hr class="fancy">
+
+                  <h4 class="address">218 N. Alston Street<br> Foley, AL 36535</h4>
+                  <hr class="fancy">
+
+                  <h4 class="email">noel<span>@</span>attorney-leonard.com</h4>
+                  <hr class="fancy">
+
+                    <ul class="social-links">
+                      <li>
+                        <%= link_to '/fb', target: '_blank' do %>
+                          <i class="fa fa-facebook"></i>
+                        <% end %>
+                      </li>
+
+                      <li>
+                        <%= link_to '/twitter', target: '_blank' do %>
+                          <i class="fa fa-twitter"></i>
+                        <% end %>
+                      </li>
+
+                      <li>
+                        <%= link_to '/linkedin', target: '_blank' do %>
+                          <i class="fa fa-linkedin"></i>
+                        <% end %>
+                      </li>
+
+                      <li>
+                        <%= link_to '/twitter', target: '_blank' do %>
+                          <i class="fa fa-twitter"></i>
+                        <% end %>
+                      </li>
+
+                      <li>
+                        <%= link_to '/youtube', target: '_blank' do %>
+                          <i class="fa fa-youtube"></i>
+                        <% end %>
+                      </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="left">
+             <!--  <p>If you or a resident of <span>Mobile</span>, <span>Baldwin</span>, or <span>Escambia</span> county, and suffer
+              from a serious injury as a result of a motorcycle, automotive, or 18-wheeler accident, contact Noel B. Leonard today to discuss your options.</p> -->
+
+               <p>If you suffer from a serious injury resulting from a motorcycle, automotive, or 18-wheeler accident in <span>Mobile</span>, <span>Baldwin</span>, or <span>Escambia</span> county, contact Noel B. Leonard today to discuss your options.</p>
+
+              <p> Fill out our Case Evaluation Form below, or call us now, to schedule a consultation.</p>
+            </div>
+          </div>
         </div>
 
-        <div class="col-md-6 col-xs-12 formsec">
-            <div class="siteorigin-widget-tinymce textwidget">
-              <div id="wufoo-zj0erzt178k0t4"><iframe id="wufooFormzj0erzt178k0t4" class="wufoo-form-container" height="821" allowtransparency="true" frameborder="0" scrolling="no" style="width:100%;border:none" src="https://vincidesigns.wufoo.com/embed/zj0erzt178k0t4/def/embedKey=zj0erzt178k0t4277622&amp;entsource=wordpress&amp;referrer=http%3Awuslashwuslashwww.attorney-leonard.comwuslashabout-uswuslash&amp;header=hide"><a href="https://vincidesigns.wufoo.com/forms/zj0erzt178k0t4/" title="html form">Fill out my Wufoo form!</a></iframe></div></div>
+        <div id="case_form" class="sec-form">
+          <div class="container">
+            <div class="form">
+                <p class="text-center">Answer a few questions for us, and someone from our team will be in touch with you very soon.<br>
+                <span>*All fields are required.</span></p>
+                <%= form_for @client, url: contact_path do |client| %>
+                    <fieldset>
+                        <% if flash[:notice] %>
+                            <div class="notice"><%= flash[:notice] %></div>
+                        <% end %>
 
-          <!--
-            <%= form_for @client, url: client_path do |client| %>
-                <fieldset>
-                    <% if flash[:notice] %>
-                        <div class="notice"><%= flash[:notice] %></div>
-                    <% end %>
+                        <% if flash[:alert] %>
+                            <div class="notice"><%= flash[:alert] %></div>
+                        <% end %>
 
-                    <% if flash[:alert] %>
-                        <div class="notice"><%= flash[:alert] %></div>
-                    <% end %>
+                        <div class="form-group name">
+                            <p>First Name:</p>
+                            <%= client.text_field :first_name %>
+                        </div>
 
-                    <div class="form-group name">
-                        <span class="required">*</span> First Name: <br>
-                        <%= client.text_field :first_name %>
-                    </div>
+                        <div class="form-group last-name">
+                            <p>Last Name: </p>
+                            <%= client.text_field :last_name %>
+                        </div>
 
-                    <div class="form-group name">
-                        <span class="required">*</span> Last Name: <br>
-                        <%= client.text_field :last_name %>
-                    </div>
+                        <div class="form-group phone">
+                            <p>Phone Number: </p>
+                            <%= client.text_field :phone %>
+                        </div>
 
-                    <div class="form-group phone">
-                        <span class="required">*</span> Phone Number: <br>
-                        <%= client.text_field :phone %>
-                    </div>
+                        <div class="form-group address">
+                            <p>Address: </p>
+                            <%= client.text_field :address %>
+                        </div>
 
-                    <div class="form-group email">
-                        <span class="required">*</span> Email address: <br>
-                        <%= client.email_field :email %>
-                    </div>
+                        <div class="form-group email">
+                            <p>Email address: </p>
+                            <%= client.email_field :email %>
+                        </div>
 
-                    <div class="form-group">
-                        How did you find us?: <br>
+                        <div class="form-group case_type">
+                            <p>I Need Help With: </p>
+                           <!--  <%= select_tag(:case_type, options_for_select([["Injury from an Auto Accident", "Auto Injury"], ["Injury from an Motorcycle Accident", "Motorcycle Injury"], ["Injury from an 18-Wheeler Accident", "18-Wheeler Injury"], ["Other Legal Concerns (Provide details below)", "Other"]]), {:prompt => 'Select Option'}) %>-->
 
-                    </div>
+                                <p><%= client.radio_button(:case_type, "Auto Injury", class: 'inline') %>
+                                <%= label_tag(:case_type_auto, "Injury from an Auto Accident", class: 'inline') %></p>
 
-                    <div class="form-group message">
-                        <span class="required">*</span>Additional Details About Your Case or Services Needed: <br>
-                        <%= client.text_area :content %>
-                    </div>
+                                <p><%= client.radio_button(:case_type, "Motorcycle Injury") %>
+                                <%= label_tag(:case_type_motorcycle, "Injury from a Motorcycle Accident") %></p>
 
+                                <p><%= client.radio_button(:case_type, "18-Wheeler Injury") %>
+                                <%= label_tag(:case_type_truck, "Injury from an 18-Wheeler Accident") %></p>
 
-
-
-
-
-
+                                <p><%= client.radio_button(:case_type, "Other") %>
+                                <%= label_tag(:case_type_other, "Other") %></p>
+                        </div>
 
 
+                        <div class="clearfix"></div>
 
+                        <div class="form-group message">
+                            <p>Additional details about your case, or services needed: </p>
+                            <%= client.text_area :content %>
+                        </div>
 
+                        <div class="form-group honey">
+                            <%= label_tag :honey %>
+                            <%= client.text_field :honey %>
+                            <span class="help">Do not fill in this field. It is an anti-spam measure.</span>
+                        </div>
 
-                    <div class="form-group honey">
-                        <%= label_tag :honey %>
-                        <%= client.text_field :honey %>
-                        <span class="help">Do not fill in this field. It is an anti-spam measure.</span>
-                    </div>
-
-                    <div class="form-group submit">
-                        <%= client.submit "Submit", :class=> "send-message" %>
-                    </div>
-                </fieldset>
-            <% end %> -->
+                        <div class="form-group submit">
+                            <%= client.submit "Submit", :class=> "send-message" %>
+                        </div>
+                    </fieldset>
+                <% end %>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-  </div>
+
+        <div class="ms2">
+          <div class="overlay">
+            <div class="container">
+              <h2>Let Noel B. Leonard <span>fight for you.</span></h2>
+              <p>If you live in Baldwin, Mobile, or Escambia County, and you or a loved one has been injured in a motorcycle accident in Alabama, contact accident attorney, Noel B. Leonard today.</p>
+              <hr class="fancy">
+              <p>Learn more about your rights, and start moving forward.<br> Fill out our <%=link_to "case evaluation form", contact_path %>, or call now to schedule a consultation.<br>
+              <%= number_to_phone(2519438638, delimiter: '-', class: 'call-link') %></p>
+            </div>
+          </div>
+        </div>
 </div>
 
+        <!--
+        I need help with: (checkbox)
+            1. Injury from an Auto Accident
+            2. Injury from an 18-Wheeler Accident
+            3. Personal Injury
+            4. Criminal Defense
+            5. DUI Arrests &amp; Traffic Offenses
+            6. Estate Planning
+            7. Business Law
+            8. Collections
 
-<!--
-I need help with: (checkbox)
-    1. Injury from an Auto Accident
-    2. Injury from an 18-Wheeler Accident
-    3. Personal Injury
-    4. Criminal Defense
-    5. DUI Arrests &amp; Traffic Offenses
-    6. Estate Planning
-    7. Business Law
-    8. Collections
+        How did you find us? (dropdown)
+            Google Search
+            Referral
+            Social Media
+            Online Directory
+            Other
 
-How did you find us? (dropdown)
-    Google Search
-    Referral
-    Social Media
-    Online Directory
-    Other
+            Additional Details About Your Case or Services Needed
 
-    Additional Details About Your Case or Services Needed
+        ===============
+        1. Date of incident, location (full address)
+        2. Date of incident, location (full address)
+        3. Date of incident, type of injury (checkbox)
+                Spinal Cord Injury
+                Wrongful Death
+                Slip and Fall
+                Medical Malpractice
+                Dog Bite
+                Assault and/or Battery
 
-===============
-1. Date of incident, location (full address)
-2. Date of incident, location (full address)
-3. Date of incident, type of injury (checkbox)
-        Spinal Cord Injury
-        Wrongful Death
-        Slip and Fall
-        Medical Malpractice
-        Dog Bite
-        Assault and/or Battery
-
-5. Date of incident, location (full address)
- -->
+        5. Date of incident, location (full address)
+         -->
