--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -41,7 +41,7 @@
 
 				<div class="break"></div>
 				<h4><span>Who do we represent?</span></h4>
-					<p class="second">If you are suffering from a serious injury caused by a motorcycle, automotive, or 18-wheeler accident in Baldwin, Mobile, or Escambia County, Noel and his firm can help.</p>
+					<p class="second">If you are suffering from a serious injury caused by a motorcycle, automobile, or 18-wheeler accident in Baldwin, Mobile, or Escambia County, Noel and his firm can help.</p>
 
 					<p>Noel B. Leonard Attorney, LLC employs a knowledgeable staff. Our team is capable of addressing your legal concerns, and helping you to understand your rights.</p>
 					<p>Our firm will evaluate your case, and help file your claim, and make every effort to see that you receive proper compensation for your injuries sustained during the accident.</p>
