--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -310,6 +310,8 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 				}
 			}
 		}
+
+		.fst-links { width:70%;}
 	}
 
 	@include bp(ph) {
