--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
 
     <%= render 'layouts/rails_default' %>
     <%= render 'layouts/shim' %>
+    <%= render 'layouts/ga-code' %>
   </head>
 
    <body class=" <%= controller_name %> <%= action_name %>">
