page descriptions and form email

--- a/app/views/static_pages/18wheeler-accidents.html.erb
+++ b/app/views/static_pages/18wheeler-accidents.html.erb
@@ -1,5 +1,6 @@
 <% @page_title = "18-Wheeler Accidents" %>
-<% @page_description = "New Subject" %>
+<% @page_description = "If you are the victim of an 18-wheeler accident in Baldwin, Mobile, or Escambia County, and schedule a consultation with Noel B. Leonard today, to learn more about your options." %>
+
 
 <div class="truck-claims">
 	<div class="p-header">
