--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,5 @@
 <% @page_title = "About Us" %>
-<% @page_description = "New Subject" %>
+<% @page_description = "Noel B. Leonard, LLC is located in Foley, Alabama, and represents clients from Mobile, Baldwin, and Escambia counties." %>
 
 <div class="inside-sec">
 	<div class="cst-header">
