--- a/app/views/static_pages/auto-accidents.html.erb
+++ b/app/views/static_pages/auto-accidents.html.erb
@@ -1,5 +1,5 @@
 <% @page_title = "Auto Accidents" %>
-<% @page_description = "New Subject" %>
+<% @page_description = "If you are the victim of an auto accident in Baldwin, Mobile, or Escambia County, and schedule a consultation with Noel B. Leonard today, to learn more about your options." %>
 
 <div class="auto-s2">
 	<div class="over">
