--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,5 @@
 <% @page_title = "Contact Us" %>
-<% @page_description = "New Subject" %>
+<% @page_description = "If you suffer from a serious injury resulting from a motorcycle, automotive, or 18-wheeler accident inMobile, Baldwin, or Escambia county, contact Noel B. Leonard today to discuss your options." %>
 
 <div class="header-wrap">
   <div class="cst-header">
