--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <% @page_title = "Noel Leonard, Foley Attorney" %>
-<% @page_description = "Noel B. Leonard is a Foley Alabama injury attorney for personal injury, auto accidents, and 18 wheeler crashes in Baldwin, Mobile, and Escambia Counties." %>
+<% @page_description = "Noel B. Leonard is an Alabama attorney who represents victims of motorcycle, auto, and 18-wheeler accident injuries in Baldwin, Mobile, and Escambia Counties." %>
 
 <section class="site-intro">
 	<div class="overlay">
