--- a/app/views/static_pages/resources.html.erb
+++ b/app/views/static_pages/resources.html.erb
@@ -1,5 +1,5 @@
 <% @page_title = "Resources" %>
-<% @page_description = "New Subject" %>
+<% @page_description = "This is a list of useful resources for legal information in Alabama." %>
 
 <div class="cst-header">
 	<!-- <div class="over"> -->
