--- a/app/views/static_pages/motorcycle-accidents.html.erb
+++ b/app/views/static_pages/motorcycle-accidents.html.erb
@@ -1,5 +1,5 @@
 <% @page_title = "Motorcycle Accidents" %>
-<% @page_description = "New Subject" %>
+<% @page_description = "If you are the victim of a motorcycle accident in Baldwin, Mobile, or Escambia County, and schedule a consultation with Noel B. Leonard today, to learn more about your options." %>
 
 
 <div class="header-wrap">
