--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -46,17 +46,17 @@
 
 					<h4 class="closer">Our Practice Areas Include:</h4>
 					<div class="practice-claims-full">
-						<%=link_to "/auto-accidents", class: 'practice-boxes-op bike' do %>
+						<%=link_to "/motorcycle-accidents", class: 'practice-boxes-op bike' do %>
 							<i class="fa fa-motorcycle"></i>
 							<h4>Motorcyle Accident<br> Injury Claims</h4>
 						<% end %>
 
-						<%=link_to "/trucker-accidents", class: 'practice-boxes-op auto' do %>
+						<%=link_to "/auto-accidents", class: 'practice-boxes-op auto' do %>
 							<i class="fa fa-car"></i>
 							<h4>Auto Accident<br> Injury Claims</h4>
 						<% end %>
 
-						<%=link_to "/motorcycle-accidents", class: 'practice-boxes-op trucker' do %>
+						<%=link_to "/trucker-accidents", class: 'practice-boxes-op trucker' do %>
 							<i class="fa fa-truck"></i>
 							<h4>18-Wheeler<br> Accident Victims</h4>
 						<% end %>
