--- a/app/views/static_pages/auto-accidents.html.erb
+++ b/app/views/static_pages/auto-accidents.html.erb
@@ -4,7 +4,7 @@
 <div class="auto-s2">
 	<div class="over">
 		<div class="title-box">
-			<h1>Automotive Accident Claims</h1>
+			<h1>Automobile Accident Claims</h1>
 			<h3>Attorney Leonard helps accident victims get the results they need to heal and move forward.</h3>
 		</div>
 	</div>
