--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,9 +1,13 @@
 <header class="header-new">
+  <div class="topbar">
+    <!-- <div class="info consult">Free Consultations</div> -->
+    <h5>No fees unless you collect! &nbsp;<span> We don't get paid if you don't get paid!</span></h5>
+  </div>
   <div class="main-header">
     <!-- <div class="container no-padding"> -->
       <div class="logo-block"><%= link_to(image_tag( 'logo-nbl.png', alt: 'Noel Leonard Attorney - Logo', class: 'img-responsive logo-img'), root_path ) %></div>
       <div class="main-block">
-        <h4 class="call">Call Today:<br>  <div class="call-link"><%= number_to_phone(2519438638, delimiter: '-') %></div></h4>
+        <h4 class="call"><b>Free Consultations:</b><br>  <div class="call-link"><%= number_to_phone(2519438638, delimiter: '-') %></div></h4>
         <h4 class="eval">Fill Out Our<br><%= link_to('Contact Form', contact_path ) %></h4>
         <%= link_to('/espanol', class: 'esp-link' ) do %>
           <h4>habla espanol? <br>haga clic aqui</h4>
