added copy line

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -81,8 +81,10 @@
       </div>
     </div>
 
-      <!-- <p class="copy">Copyright <%= Time.now.year %></p> -->
-      <span class="disclaimer">No representation is made that the quality of legal services to be performed is greater than the quality of legal services performed by other lawyers. </span>
+    <div class="disclaimer">
+        <p class="copy">Copyright <%= Time.now.year %>. All rights reserved. Design by <%= link_to "High Seas Design House.", hsdh_path, :target => "_blank" %> </p>
+        <span>No representation is made that the quality of legal services to be performed is greater than the quality of legal services performed by other lawyers. </span>
+    </div>
   </div>
   <a href="#" class="scroll-up">Scroll</a>
 </footer>
