--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -122,7 +122,10 @@ footer { @include sec-default(); background-color: $dk-blue; border-top: 2px sol
       &.four { width:15%; float: right; }
     }
   }
-  .disclaimer {@include sec-default(); color: $lt-blue; font-style: italic; font-size: 13px; margin-top:30px; text-align: center;}
+  .disclaimer {@include sec-default();  margin-top:40px; text-align: center;
+    p {font-size: 14px; margin-bottom: 5px;}
+    span{color: $lt-blue; font-style: italic;}
+  }
 
   @include bp(tb) {
     .fs2 {width:100%;
