--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,21 @@
   </head>
 
    <body class=" <%= controller_name %> <%= action_name %>">
+    <script type="text/javascript">
+    /* <![CDATA[ */
+    var google_conversion_id = 855304624;
+    var google_custom_params = window.google_tag_params;
+    var google_remarketing_only = true;
+    /* ]]> */
+    </script>
+    <script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+    </script>
+    <noscript>
+    <div style="display:inline;">
+    <img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/855304624/?guid=ON&amp;script=0"/>
+    </div>
+    </noscript>
+
       <%= render 'layouts/header' %>
       <%= yield %>
       <%= render 'layouts/footer' %>
