--- a/app/views/layouts/_rails_default.html.erb
+++ b/app/views/layouts/_rails_default.html.erb
@@ -1,4 +1,4 @@
-<meta name="description" content= "<%= @page_description %>">
+<!-- <meta name="description" content= "<%= @page_description %>"> -->
 <title><%= @page_title  %> | Noel Leonard Attorney</title>
 
 <%= csrf_meta_tags %>
